css/style.scss
@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@400;700&display=swap");

/* Andy Bell’s Modern CSS Reset */

*,
*::before,
*::after {
  box-sizing: border-box;
}

body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
dl,
dd {
  margin: 0;
}

ul[role="list"],
ol[role="list"] {
  list-style: none;
}

html:focus-within {
  scroll-behavior: smooth;
}

body {
  min-height: 100vh;
  text-rendering: optimizeSpeed;
}

a:not([class]) {
  text-decoration-skip-ink: auto;
}

img,
picture {
  max-width: 100%;
  display: block;
}

input,
button,
textarea,
select {
  font: inherit;
}

@media (prefers-reduced-motion: reduce) {
  html:focus-within {
    scroll-behavior: auto;
  }

  *,
  *::before,
  *::after {
    animation-duration: 0.01ms !important;
    animation-iteration-count: 1 !important;
    transition-duration: 0.01ms !important;
    scroll-behavior: auto !important;
  }
}

/*colors*/
$BgColor: #fcfaf9;
$VeryDarkBlue: #191826;
$VeryLightGray: #fcfaf9;
$SoftRed: #fa7453;
$Aquamarine: #66e2dc;
$Turquoise: #40fff6;
$Orange: #ff9201;
$LightOrange: #ffb964;

/*fonts*/

$IBMPlexSans: "IBM Plex Sans", sans-serif;

html {
  font-size: 16px;
  font-family: $IBMPlexSans;
}

.container {
  max-width: 375px;
  margin: 0 auto;
  background-image: url("../assets/bg-main-mobile.png");
  background-repeat: no-repeat;
  background-position: top right;
  background-size: 100%;
  background-color: $BgColor;
}

.header {
  margin-bottom: 4.25rem;
  color: $VeryDarkBlue;
  padding: 0 1.5rem;
}

.header__logo {
  margin-bottom: 4rem;
  padding-top: 2.5rem;
}

.header__text {
  font-size: 2.5rem;
  font-weight: 700;
  line-height: 120%;
  letter-spacing: -0.4545454680919647px;
  text-align: left;
}

.header_description {
  font-size: 16px;
  line-height: 162%;
  margin-top: 1.25rem;
}

main {
  display: flex;
  flex-direction: column;
}

.main-illustration {
  display: flex;
}

.main-illustration__bg {
  background-repeat: no-repeat;
  background-size: 100%;
  padding: 0.05rem 3rem;
  background-color: $VeryDarkBlue;
  background-position: center;
  margin: 6rem 0 0 0;
  border-radius: 12px;
}

.main-illustration__img {
  max-width: 13.06rem;
  max-height: 26.875rem;
  background-repeat: no-repeat;
  background-size: 100%;
  background-position: center center;
  z-index: 1;
  margin-left: -18rem;
}

.premium {
  padding: 0 2.25rem;
  margin-top: -2rem;
  background-color: $SoftRed;
  color: $VeryLightGray;
  z-index: 3;
  border-radius: 12px;
}

.premium__title {
  font-size: clamp(2rem, 2.5vw, 2.5rem);
  font-weight: 700;
  line-height: 40px;
  letter-spacing: 0px;
  text-align: left;
  padding-top: 3rem;
  padding-bottom: 0.75rem;
}

.premium__description {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 28px;
  letter-spacing: 0px;
  text-align: left;
  max-width: 18.8rem;
  padding-bottom: 2.25rem;
}

.premium__price {
  display: flex;
  align-items: center;
  font-size: 4rem;
  font-style: normal;
  font-weight: 700;
  line-height: 52px;
  letter-spacing: 0px;
  text-align: left;
  margin-bottom: 2rem;

  &::after {
    content: "/ month";
    font-size: 1.25rem;
    font-weight: 400;
    line-height: 32px;
    letter-spacing: -0.20000000298023224px;
    padding-left: 1rem;
  }
}

.premiuim__download {
  margin: 0 auto;
  display: flex;
  flex-direction: column;
}
.button__download {
  height: 3.8rem;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 12px;
  -webkit-border-radius: 12px;
  -moz-border-radius: 12px;
  -ms-border-radius: 12px;
  -o-border-radius: 12px;
  border: none;
}

.button__download img {
  padding-right: 0.49rem;
}

.button__download__text {
  font-size: 1.125rem;
  font-style: normal;
  font-weight: 700;
  line-height: 32px;
  letter-spacing: -0.18px;
}

.button__ios {
  background-color: $VeryDarkBlue;
  color: $VeryLightGray;
  margin-bottom: 1rem;
}

.button__android {
  color: $VeryDarkBlue;
  background-color: $VeryLightGray;
  margin-bottom: 3rem;
}

.footer {
  padding: 0 1.5rem;
}

.footer__logo {
  margin-top: 4rem;
  margin-bottom: 2rem;
}

.footer__text {
  max-width: 20.4rem;
  font-size: 1rem;
  font-weight: 400;
  line-height: 26px;
  letter-spacing: 0px;
  text-align: left;
}

.footer__adress address,
a {
  text-decoration: none;
  all: initial;
  font-weight: 700;
  color: inherit;
  font-family: inherit;
  font-size: 1rem;
}

.footer__social-media {
  margin-top: 4rem;
  padding-bottom: 5rem;
  display: flex;
  & img {
    padding-right: 1.125rem;
  }
}

